@@ -81,13 +81,26 @@ public:
 	       const string& print_name,
 	       DispValueType type = UnknownType);
 
+    // Copy constructor
+    DispValue (const DispValue& dv);
+
+    // Destructor
     ~DispValue();
+
+    // Duplicator
+    DispValue *dup();
 
     DispValueType type()       const { return mytype; }
     DispValue*    parent()     const { return myparent; }
     int           depth()      const { return mydepth; }
     const string& full_name()  const { return myfull_name; }
     const string& name()       const { return print_name; }
+
+    DispValue*&   parent()     { return myparent; }
+    int&          depth()      { return mydepth; }
+    string&       full_name()  { return myfull_name; }
+    string&       name()       { return print_name; }
+
     bool          is_changed() const { return changed; }
     bool          expanded()   const { return myexpanded; }
     bool          collapsed()  const { return !expanded(); }
